--- a/app/src/main/res/layout/list_item_recommend_fragment.xml
+++ b/app/src/main/res/layout/list_item_recommend_fragment.xml
@@ -1,42 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:padding="10dp">
+    android:layout_width="match_parent"
+    android:layout_height="70dp">
 
     <ImageView
         android:id="@+id/img_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="10dp"
         android:src="@mipmap/ic_launcher" />
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/text_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@id/img_icon"
         android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/img_icon"
-        android:orientation="vertical">
+        android:text="微信"
+        android:textColor="@android:color/black"
+        android:textSize="20dp" />
 
-        <TextView
-            android:id="@+id/text_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="微信"
-            android:textColor="@android:color/black"
-            android:textSize="20dp" />
-
-        <TextView
-            android:id="@+id/text_size"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="50 M" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/text_size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/img_icon"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@+id/img_icon"
+        android:text="50 M" />
 
     <Button
         android:id="@+id/btn_dl"
@@ -44,9 +38,15 @@
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
         android:background="#24AA42"
         android:text="下载"
         android:textColor="@android:color/white" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_alignParentBottom="true"
+        android:background="#d1d1d1" />
 
 </RelativeLayout>
