--- a/app/src/main/res/layout/list_item_recommend_fragment.xml
+++ b/app/src/main/res/layout/list_item_recommend_fragment.xml
@@ -4,12 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="70dp">
 
+    <TextView
+        android:id="@+id/tv_index"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:text="22" />
+
     <ImageView
         android:id="@+id/img_icon"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/tv_index"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
