--- a/app/src/main/res/layout/list_item_recommend_fragment.xml
+++ b/app/src/main/res/layout/list_item_recommend_fragment.xml
@@ -9,8 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/dp_10"
-        android:text="22" />
+        android:layout_marginLeft="@dimen/dp_10" />
 
     <ImageView
         android:id="@+id/img_icon"
