--- a/app/src/main/res/menu/menu_left.xml
+++ b/app/src/main/res/menu/menu_left.xml
@@ -1,20 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <group
+        android:id="@+id/menu_top"
+        android:checkableBehavior="single">
 
-    <item
-        android:id="@+id/menu_app_update"
-        android:icon="@drawable/ic_loop_gray_24dp"
-        android:title="应用更新" />
 
-    <item
-        android:id="@+id/menu_message"
-        android:icon="@drawable/ic_message_gray_24dp"
-        android:title="消息中心" />
+        <item
+            android:id="@+id/menu_app_update"
+            android:icon="@drawable/ic_loop_gray_24dp"
+            android:title="应用更新" />
 
-    <item
-        android:id="@+id/menu_setting"
-        android:icon="@drawable/ic_setting_gray_24dp"
-        android:title="设置" />
+        <item
+            android:id="@+id/menu_message"
+            android:icon="@drawable/ic_message_gray_24dp"
+            android:title="下载管理" />
+
+        <item
+            android:id="@+id/manage_app"
+            android:icon="@drawable/ic_message_gray_24dp"
+            android:title="管理应用" />
+
+        <item
+            android:id="@+id/menu_setting"
+            android:icon="@drawable/ic_setting_gray_24dp"
+            android:title="设置" />
+
+    </group>
+
+    <group
+        android:id="@+id/group2"
+        android:checkableBehavior="single">
+
+        <item
+            android:id="@+id/menu_logout"
+            android:icon="@drawable/ic_exit_to_app_24dp"
+            android:title="退出登录" />
+    </group>
 
 </menu>
