--- a/app/src/main/res/layout/list_item_recommend_fragment.xml
+++ b/app/src/main/res/layout/list_item_recommend_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="70dp">
+    android:layout_height="70dp"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/tv_index"
@@ -40,15 +40,13 @@
         android:layout_toRightOf="@+id/img_icon"
         android:text="50 M" />
 
-    <Button
+    <com.lxy.shop.widget.DownloadProgressButton
         android:id="@+id/btn_dl"
-        android:layout_width="60dp"
+        android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
-        android:background="#24AA42"
-        android:text="下载"
         android:textColor="@android:color/white" />
 
     <View
