--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--<android.support.v4.widget.SwipeRefreshLayout
+    <com.lxy.shop.widget.RefreshLayout
         android:id="@+id/swip_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">-->
+        android:layout_height="match_parent">
 
-        <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.lxy.shop.ui.MainActivity">
@@ -19,6 +18,6 @@
 
         </RelativeLayout>
 
-    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+    </com.lxy.shop.widget.RefreshLayout>
 
 </layout>
